# rubis-cube-solver

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  README.md  main.cpp
Solver/: BFSSolver.h
